PS-1065: API implementation process updates

--- a/implementation/api-integration.mdx
+++ b/implementation/api-integration.mdx
@@ -20,7 +20,7 @@ The Connective Health Clinical Data Processing API specification can be found [h
 
 ### Staging Environment Testing
 
-Before connecting to the production API, integration is tested in the staging environment. **No live patient data should be used in the staging environment.** This includes not just PHI (Protected Health Information), but *any* PII (Personally Identifiable Information).
+Before connecting to the production API, integration is tested in the staging environment. **No live patient data should be used in the staging environment.** This includes not just PHI (Protected Health Information), but *any* PII (Personally Identifiable Information). If this occurs by mistake, please contact Connective Health as soon as possible so that the data can be removed.
 
 1. Connective Health sends staging information package to customer:
     * Staging test patient information
