--- a/product/fhir-data.mdx
+++ b/product/fhir-data.mdx
@@ -37,7 +37,7 @@ Base element is a [Bundle](https://www.hl7.org/fhir/R4/bundle.html) resource, in
 
 | Resource                                                                              | US Core Profile                                                                                                                                    | Description                                                                                                                                                                                          |
 |---------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| [Patient](https://www.hl7.org/fhir/R4/patient.html)                                   | [US Core Patient](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-patient.html)                                                       | Based on the patient processing events, meaning we do not deduplicate the patient's demographics.                                                                                                    |
+| [Patient](https://www.hl7.org/fhir/R4/patient.html)                                   | [US Core Patient](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-patient.html)                                                       | Based on the patient being processed. Includes additional addresses, phone numbers, and email addresses found during network searches.                                                               |
 | [AllergyIntolerance](https://www.hl7.org/fhir/R4/allergyintolerance.html)             | [US Core AllergyIntolerance](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-allergyintolerance.html)                                 | Based on Connective Health’s patient summary template, which excludes non-clinically relevant content such as "unclassified" allergies.                                                              |
 | [CarePlan](https://www.hl7.org/fhir/R4/careplan.html)                                 | [US Core CarePlan](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-careplan.html)                                                     | Based on Connective Health's patient summary template. Includes reference to encounter.                                                                                                              |
 | [Encounter](https://www.hl7.org/fhir/R4/encounter.html)                               | [US Core Encounter](https://www.hl7.org/fhir/us/core/StructureDefinition-us-core-encounter.html)                                                   | Based on Connective Health’s patient summary template, which excludes older and less relevant encounters.                                                                                            |
