PS-1048: Add docs for DiagnosticReports on FHIR bundle

--- a/product/fhir-data.mdx
+++ b/product/fhir-data.mdx
@@ -19,14 +19,14 @@ In the event that the source data does not satisfy FHIR or US Core profile valid
 
 ## Push
 
-* Customer is able to have a FHIR bundle pushed to them
+Customer is able to have a FHIR bundle pushed to them:
 * Via an S3 bucket (currently available)
 * Azure (soon to be available)
 * Google Cloud Storage (soon to be available)
 
 ## Pull
 
-* Customer is able to request a FHIR bundle on demand (soon to be available)
+Customer is able to request a FHIR bundle on demand (soon to be available).
 
 # Bundles
 
