--- a/product/webhooks.mdx
+++ b/product/webhooks.mdx
@@ -6,6 +6,10 @@ icon: 'webhook'
 
 <Warning>This feature is still in early adopter status and is subject to change</Warning>
 
+<Tip>
+    After following this guide, provide Connective Health with your webhook URL and [event types](#event-types)
+</Tip>
+
 
 # Overview
 
