PS-1500: Medications of interest
* improve documentation around medications of interest
* fixed issue where Directives V2 weren't being used by the API

--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -4,6 +4,12 @@ description: 'Product and API Updates'
 icon: 'gears'
 ---
 
+<Update label="2025-02-20" description="v2.0.0">
+
+    ## Documentation
+    * Clarifications regarding the Medications Of Interest field and how it is intended to be used
+</Update>
+
 <Update label="2025-02-12" description="v2.0.0">
 
     ## New Features
