PS-1670: Pulmonary Template

--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -4,6 +4,12 @@ description: 'Product and API Updates'
 icon: 'gears'
 ---
 
+<Update label="2025-03-03" description="v2.1.0">
+
+    ## Documentation
+    * New diagnostic category added : pulmonary
+</Update>
+
 <Update label="2025-02-20" description="v2.0.0">
 
     ## Documentation
