--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -6,9 +6,8 @@ icon: 'gears'
 
 <Update label="2025-03-05" description="v3.0.0">
 
-    ## Documentation
-    * Breaking change: Medical Summary Period feature can only be used in conjunction with Diagnostic Category Directive feature.
-    * Validation added: Requests that specify a medical summary period without also selecting at least one diagnostic category will be rejected
+    ## Breaking Change
+    * Medical Summary Period feature can only be used in conjunction with Diagnostic Category Directive feature. Requests that specify a medical summary period without also selecting at least one diagnostic category will be rejected
 </Update>
 
 <Update label="2025-03-03" description="v2.1.0">
