PS-1663: Update behavior of medical summary period API option (#43)
* PS-1663: Update behavior of medical summary period API option

* Update api-reference/release-notes.mdx

Co-authored-by: jjathman-ch <165204964+jjathman-ch@users.noreply.github.com>

---------

Co-authored-by: jjathman-ch <165204964+jjathman-ch@users.noreply.github.com>

--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -4,10 +4,16 @@ description: 'Product and API Updates'
 icon: 'gears'
 ---
 
+<Update label="2025-03-05" description="v3.0.0">
+
+    ## Breaking Change
+    * Medical Summary Period feature can only be used in conjunction with Diagnostic Category Directive feature. Requests that specify a medical summary period without also selecting at least one diagnostic category will be rejected
+</Update>
+
 <Update label="2025-03-03" description="v2.1.0">
 
     ## Documentation
-    * New diagnostic category added : pulmonary
+    * New diagnostic category added: pulmonary
 </Update>
 
 <Update label="2025-02-20" description="v2.0.0">
