--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -4,6 +4,12 @@ description: 'Product and API Updates'
 icon: 'gears'
 ---
 
+<Update label="2025-03-14" description="v3.1.0">
+
+    ## New Features
+    * New [Patient Data v2 Validate](/clinical-data/patient-data-v2-validate) endpoint which may be used to check the validity of one or more processing records without attempting to actually process them
+</Update>
+
 <Update label="2025-03-05" description="v3.0.0">
 
     ## Breaking Change
