PS-1785: Stroke Template

--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -4,6 +4,12 @@ description: 'Product and API Updates'
 icon: 'gears'
 ---
 
+<Update label="2025-03-26" description="v3.1.0">
+
+    ## Documentation
+    * New diagnostic category added: stroke
+</Update>
+
 <Update label="2025-03-14" description="v3.1.0">
 
     ## New Features
