PS-1848: Validation Updates
* updates to include validating that certain top level arrays cannot be null
* updated release notes
* removed warning about API in active development

--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -4,7 +4,13 @@ description: 'Product and API Updates'
 icon: 'gears'
 ---
 
-<Update label="2025-03-26" description="v3.1.0">
+<Update label="2025-03-26" description="v3.2.1">
+
+    ## Bug Fixes
+    * Fixed validations which were allowed null lists when they are required - this was never intentionally supported
+</Update>
+
+<Update label="2025-03-26" description="v3.2.0">
 
     ## Documentation
     * New diagnostic category added: stroke
