PS-1848: Validation Updates
* words are hard

--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -7,7 +7,7 @@ icon: 'gears'
 <Update label="2025-03-26" description="v3.2.1">
 
     ## Bug Fixes
-    * Fixed validations which were allowed null lists when they are required - this was never intentionally supported
+    * Patient Panel and Medication History Panel null lists now fail validation as originally intended
 </Update>
 
 <Update label="2025-03-26" description="v3.2.0">
