PS-1873: KAID Configuration
* documentation updates for KAID configuration details

--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -4,6 +4,15 @@ description: 'Product and API Updates'
 icon: 'gears'
 ---
 
+<Update label="2025-04-17" description="v3.3.0">
+
+    ## New Features
+    * Better support for [KAID Health](https://www.kaidhealth.com) processing. See [Patient Data v2](/clinical-data/patient-data-v2) `patientPanelDirectives.kaidConfiguration` for details
+
+    ## Documentation
+    * Minor wording improvements throughout
+</Update>
+
 <Update label="2025-03-26" description="v3.2.1">
 
     ## Bug Fixes
