PS-1643: Patient Max Addresses
* enforce maximum number of patient addresses

--- a/api-reference/release-notes.mdx
+++ b/api-reference/release-notes.mdx
@@ -4,6 +4,11 @@ description: 'Product and API Updates'
 icon: 'gears'
 ---
 
+<Update label="2025-04-21" description="v3.4.1">
+    ## Bug Fixes
+    * Enforce maximum number of patient addresses is 3
+</Update>
+
 <Update label="2025-04-17" description="v3.4.0">
     ## New Features
     * Consent fields added to ADT Panel requests
